# tarea_idb003

./: main.py  pyproject.toml
epw/: MEX_MOR_Cuernavaca-Matamoros.Intl.AP.767260_TMYx.2009-2023.clm  MEX_MOR_Cuernavaca-Matamoros.Intl.AP.767260_TMYx.2009-2023.ddy  MEX_MOR_Cuernavaca-Matamoros.Intl.AP.767260_TMYx.2009-2023.pvsyst  MEX_MOR_Cuernavaca-Matamoros.Intl.AP.767260_TMYx.2009-2023.rain  MEX_MOR_Cuernavaca-Matamoros.Intl.AP.767260_TMYx.2009-2023.stat  MEX_MOR_Cuernavaca-Matamoros.Intl.AP.767260_TMYx.2009-2023.wea
notebooks/: 001_dia_mas_calido.ipynb
notebooks/.ipynb_checkpoints/: 001_dia_mas_calido-checkpoint.ipynb
osm/: 001_volumetria.osm  002_construccion.osm  002_measures.osm  005_measures_techos.osm
osm/001_volumetria/: floorplan.json  workflow.osw
osm/002_construccion/: out.osw  stderr  stdout  workflow.osw
osm/002_construccion/run/: data_point_out.json  eplusout.err  failed.job  in.idf  in.osm  pre-preprocess.idf  started.job  stdout-energyplus
osm/002_measures/: out.osw  stdout  workflow.osw
osm/002_measures/files/: MEX_MOR_Cuernavaca-Matamoros.Intl.AP.767260_TMYx.2009-2023.epw
osm/002_measures/reports/: eplustbl.html
osm/002_measures/run/: eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.rdd  eplusout.sql  finished.job  in.idf  in.osm  measure_attributes.json  pre-preprocess.idf  started.job  stdout-energyplus
osm/004_measures_este_oeste/: floorplan.json  out.osw  stdout  workflow.osw
osm/005_measures_techos/: out.osw  stdout  workflow.osw
(+41 files in other folders)
