[project]
name = "cerda-practica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iertools",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
]

[tool.uv.sources]
iertools = { git = "https://github.com/AltamarMx/iertools.git" }
